# liteparse

./: MARKDOWN_PROGRESS.md  OCR_API_SPEC.md  README.md
.github/workflows/: ci-python.yml  release-python.yml
crates/liteparse-napi/src/: types.rs
crates/liteparse-python/src/: cli.rs  lib.rs
crates/liteparse-wasm/src/: lib.rs
crates/liteparse/src/: config.rs  conversion.rs  extract.rs  lib.rs  main.rs  ocr_merge.rs  parser.rs  projection.rs  types.rs
crates/liteparse/src/markdown_layout/: lists.rs  paragraphs.rs  tables.rs  test_helpers.rs
crates/liteparse/src/ocr/: http_simple.rs
crates/liteparse/src/output/: json.rs  markdown.rs  text.rs
crates/pdfium-sys/: bindings.rs  build.rs
crates/pdfium-sys/src/: dynamic.rs
crates/pdfium/src/: font.rs  page.rs
docs/src/content/docs/liteparse/: getting_started.md
ocr/: README.md
ocr/suryaocr/: Dockerfile  README.md  pyproject.toml  server.py  test_server.py
scripts/: build-glibc-cli.sh  build-glibc-node.sh  build-musl-node.sh
