[project]
name = "suryaocr-liteparse"
version = "0.1.0"
description = "Surya OCR 2 server conforming to the LiteParse OCR API"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "surya-ocr>=0.20.0,<0.21.0",
    "fastapi>=0.131.0",
    "uvicorn>=0.41.0",
    "pillow>=10.2.0,<11",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<0.28",
    "pytest>=9.0.2",
]
